TobyInform reconstruction: update compiler and project options; adjust various files from compilation warnings

--- a/GlkView-Info.plist
+++ b/GlkView-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>GlkClient.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>uk.co.logicalshift.CocoaGlk.GlkView</string>
+	<string>com.inform7.inform-compiler</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
